--- a/crates/rooibos-runtime/Cargo.toml
+++ b/crates/rooibos-runtime/Cargo.toml
@@ -9,7 +9,7 @@ crossterm = { version = "0.28.1", features = [
     "use-dev-tty",
 ], optional = true }
 futures-util = "0.3"
-rooibos-dom = { path = "../rooibos-dom2" }
+rooibos-dom = { path = "../rooibos-dom" }
 rooibos-reactive = { path="../rooibos-reactive" }
 ratatui = { version = "0.28", default-features = false }
 tracing = "0.1"
