format toml docs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,11 @@
 [workspace]
-members = ["./crates/*", "crates/rooibos-config", "crates/rooibos-router", "examples", "examples/wasm"]
+members = [
+  "./crates/*",
+  "crates/rooibos-config",
+  "crates/rooibos-router",
+  "examples",
+  "examples/wasm",
+]
 resolver = "2"
 
 [patch.crates-io]
