move terminal backends to separate crate

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,7 +2,7 @@
 members = [
   "./crates/*",
   "crates/rooibos-config",
-  "crates/rooibos-router",
+  "crates/rooibos-router", "crates/rooibos-terminal",
   "examples",
   "examples/wasm",
 ]
