--- a/crates/rooibos-runtime/Cargo.toml
+++ b/crates/rooibos-runtime/Cargo.toml
@@ -4,17 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-crossterm = { version = "0.28.1", features = [
-  "event-stream",
-  "use-dev-tty",
-], optional = true }
 futures-util = "0.3"
 rooibos-dom = { path = "../rooibos-dom" }
-rooibos-reactive = { path = "../rooibos-reactive" }
+rooibos-reactive = { path = "../rooibos-reactive", optional = true }
 ratatui = { version = "0.28", default-features = false }
 tracing = "0.1"
 educe = "0.6"
-termwiz = { version = "0.22.0", optional = true }
 tokio-util = "0.7"
 wasm-compat = { git = "https://github.com/aschey/wasm-compat", rev = "98287ef1046e4c8694e0b90fbb0d0986573a1969", features = [
   "all",
@@ -22,29 +17,17 @@ wasm-compat = { git = "https://github.com/aschey/wasm-compat", rev = "98287ef104
 background-service = { git = "https://github.com/aschey/background-service-rs", rev = "2d4f0dd65c86b50585827cd12adaa57de3f8b214" }
 futures-cancel = { git = "https://github.com/aschey/futures-cancel", rev = "d2c20b78ff5c9e85aa892b51971cc1c1b6b22351" }
 thiserror = "1.0.63"
-
-[target.'cfg(unix)'.dependencies]
-termion = { version = "4", optional = true }
+rooibos-terminal = { path = "../rooibos-terminal" }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
-js-sys = "0.3.64"
-any_spawner = { git = "https://github.com/leptos-rs/leptos", rev = "ba9604101de35cf9c3bb69db3bee4d91362274d0", features = [
-  "wasm-bindgen",
-] }
 tokio = { version = "1.38.1", default-features = false, features = [
   "sync",
   "macros",
   "rt",
 ] }
-web-sys = { version = "0.3.64", features = ["console", "Window", "Document"] }
-wasm-bindgen-futures = "0.4.37"
 console_error_panic_hook = "0.1"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-any_spawner = { git = "https://github.com/leptos-rs/leptos", rev = "ba9604101de35cf9c3bb69db3bee4d91362274d0", features = [
-  "tokio",
-  "tracing",
-] }
 signal-hook = "0.3"
 async-signal = "0.2"
 tokio = { version = "1.38.1", default-features = false, features = [
@@ -55,15 +38,11 @@ tokio = { version = "1.38.1", default-features = false, features = [
   "process",
 ] }
 
-[target.'cfg(not(windows))'.dependencies]
-base64 = { version = "0.22.1", optional = true }
-
-[target.'cfg(windows)'.dependencies]
-clipboard-win = { version = "5.4", features = ["std"], optional = true }
 
 [features]
-default = ["crossterm"]
-crossterm = ["dep:crossterm", "ratatui/crossterm"]
-termion = ["dep:termion", "ratatui/termion"]
-termwiz = ["dep:termwiz", "ratatui/termwiz"]
-clipboard = ["dep:base64", "clipboard-win"]
+default = ["crossterm", "reactive"]
+reactive = ["rooibos-reactive"]
+crossterm = ["rooibos-terminal/crossterm"]
+termion = ["rooibos-terminal/termion"]
+termwiz = ["rooibos-terminal/termwiz"]
+clipboard = ["rooibos-terminal/clipboard"]
