--- a/crates/rooibos-ssh/Cargo.toml
+++ b/crates/rooibos-ssh/Cargo.toml
@@ -8,6 +8,7 @@ crossterm = { version = "0.28.1" }
 russh-keys = "0.45"
 russh = "0.45"
 rooibos-runtime = { path = "../rooibos-runtime" }
+rooibos-terminal = { path = "../rooibos-terminal" }
 rooibos-dom = { path = "../rooibos-dom" }
 rooibos-reactive = { path = "../rooibos-reactive" }
 tokio = { version = "1.38.1", default-features = false, features = ["sync"] }
