--- a/crates/rooibos-tester/Cargo.toml
+++ b/crates/rooibos-tester/Cargo.toml
@@ -5,8 +5,13 @@ edition = "2021"
 
 [dependencies]
 ratatui = "0.28"
-rooibos-runtime = { path = "../rooibos-runtime" }
+rooibos-runtime = { path = "../rooibos-runtime", optional = true }
+rooibos-terminal = { path = "../rooibos-terminal" }
 tokio = { version = "1.38.1", default-features = false, features = ["time"] }
 rooibos-dom = { path = "../rooibos-dom" }
-rooibos-reactive = { path = "../rooibos-reactive" }
+# rooibos-reactive = { path = "../rooibos-reactive" }
 unicode-width = "0.1.13"
+
+[features]
+default = ["runtime"]
+runtime = ["rooibos-runtime"]
