--- a/crates/rooibos-terminal/Cargo.toml
+++ b/crates/rooibos-terminal/Cargo.toml
@@ -20,6 +20,7 @@ futures-cancel = { git = "https://github.com/aschey/futures-cancel", rev = "d2c2
 tracing = "0.1"
 termwiz = { version = "0.22.0", optional = true }
 base64 = { version = "0.22.1", optional = true }
+tokio-stream = { version = "0.1.16", features = ["sync"] }
 
 [target.'cfg(unix)'.dependencies]
 termion = { version = "4", optional = true }
