--- a/crates/rooibos-runtime/Cargo.toml
+++ b/crates/rooibos-runtime/Cargo.toml
@@ -14,10 +14,11 @@ tokio-util = "0.7"
 wasm-compat = { git = "https://github.com/aschey/wasm-compat", rev = "98287ef1046e4c8694e0b90fbb0d0986573a1969", features = [
   "all",
 ] }
-background-service = { git = "https://github.com/aschey/background-service-rs", rev = "862b4828db4f5afe8a360d18c3effcd8cbe838a5" }
+background-service = { git = "https://github.com/aschey/background-service-rs", rev = "14ead7cf98eb9c32962665abb00a06df728992c8" }
 futures-cancel = { git = "https://github.com/aschey/futures-cancel", rev = "d2c20b78ff5c9e85aa892b51971cc1c1b6b22351" }
 thiserror = "1.0.63"
 rooibos-terminal = { path = "../rooibos-terminal" }
+proc-exit = "2.0.2"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 tokio = { version = "1.38.1", default-features = false, features = [
