--- a/crates/rooibos-router/Cargo.toml
+++ b/crates/rooibos-router/Cargo.toml
@@ -5,12 +5,12 @@ edition = "2021"
 
 [dependencies]
 matchit = "0.8"
-tachys = { git = "https://github.com/leptos-rs/leptos", rev = "8f0a1554b155f592cd98e397c4926edd14fac979", features = [
+tachys = { git = "https://github.com/aschey/leptos", rev = "375b72ba8d03674fe85025c14f94fb976711811e", features = [
   "reactive_graph",
   "tracing",
 ] }
 url = "2"
-reactive_graph = { git = "https://github.com/leptos-rs/leptos", rev = "8f0a1554b155f592cd98e397c4926edd14fac979", features = [
+reactive_graph = { git = "https://github.com/leptos-rs/leptos", rev = "31cb766206bd73eb6fcdb3c5893b16fd05331908", features = [
   "tracing",
   "effects",
 ] }
