--- a/crates/rooibos-dom/Cargo.toml
+++ b/crates/rooibos-dom/Cargo.toml
@@ -13,15 +13,16 @@ bitflags = "2"
 educe = "0.6"
 futures = "0.3"
 rustc-hash = "2"
-terminput = { git = "https://github.com/aschey/terminput", rev = "0eeca408b9eadf5dca616a8473454488877ecf3e" }
+terminput = { git = "https://github.com/aschey/terminput", rev = "f07cb891c397c1ab092f0f1d09c085eb52c42e8d" }
 tui-textarea = { version = "0.6", optional = true, default-features = false }
 paste = "1"
 wasm-compat = { git = "https://github.com/aschey/wasm-compat", rev = "98287ef1046e4c8694e0b90fbb0d0986573a1969", features = [
   "all",
 ] }
-taffy = "0.5.2"
+taffy = "0.6.0"
 crossterm = { version = "0.28.1", features = ["event-stream", "use-dev-tty"] }
 tracing = "0.1"
+thiserror = "1"
 
 [dev-dependencies]
 tokio = { version = "1.40", features = ["rt", "macros", "sync"] }
