--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -15,6 +15,9 @@ rooibos = { path = "../crates/rooibos", features = [
   "router",
   "spinner",
 ] }
+rooibos-keybind-macros = { path = "../crates/rooibos-keybind-macros" }
+rooibos-keybind = { path = "../crates/rooibos-keybind" }
+modalkit = { path = "../../modalkit/crates/modalkit" }
 tokio = { version = "1.40.0", features = ["rt", "macros"] }
 tracing = "0.1.40"
 tracing-subscriber = { version = "0.3.18", features = [
@@ -31,7 +34,7 @@ tokio-stream = { version = "0.1.16", features = ["sync"] }
 clap = { version = "4.5.19", features = ["derive"] }
 schematic = { version = "0.17.5" }
 futures-cancel = { git = "https://github.com/aschey/futures-cancel", rev = "d2c20b78ff5c9e85aa892b51971cc1c1b6b22351" }
-taffy = "0.5.2"
+taffy = "0.6.0"
 tokio-util = "0.7.12"
 tracing-appender = "0.2.3"
 
