--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -37,6 +37,7 @@ futures-cancel = { git = "https://github.com/aschey/futures-cancel", rev = "d2c2
 taffy = "0.6.0"
 tokio-util = "0.7.12"
 tracing-appender = "0.2.3"
+shlex = "1.3.0"
 
 [dev-dependencies]
 insta = "1.40.0"
