--- a/crates/rooibos-keybind/Cargo.toml
+++ b/crates/rooibos-keybind/Cargo.toml
@@ -17,3 +17,4 @@ wasm-compat = { git = "https://github.com/aschey/wasm-compat", rev = "98287ef104
 clap = { version = "4.5.20", features = ["derive"] }
 shlex = "1.3.0"
 clap_complete = { version = "4.5.33", features = ["unstable-dynamic"] }
+unicode-width = "0.2.0"
