--- a/crates/rooibos-keybind-macros/Cargo.toml
+++ b/crates/rooibos-keybind-macros/Cargo.toml
@@ -8,7 +8,7 @@ proc-macro = true
 
 [dependencies]
 manyhow = "0.11.4"
-modalkit = { git = "https://github.com/ulyssa/modalkit", rev = "45855daeeb7081eec626a8f9cf657f0fc2ff0a7a" }
+modalkit = { git = "https://github.com/aschey/modalkit", rev = "5d9da9f9b7c03bf257e19a44ab7d4450a3ece394" }
 proc-macro2 = "1.0.87"
 quote = "1.0.37"
 syn = { version = "2.0.79", features = ["full"] }
