--- a/crates/rooibos-keybind/Cargo.toml
+++ b/crates/rooibos-keybind/Cargo.toml
@@ -4,10 +4,11 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+rooibos-keybind-macros = { path = "../rooibos-keybind-macros" }
 rooibos-dom = { path = "../rooibos-dom" }
 rooibos-reactive = { path = "../rooibos-reactive" }
-modalkit = { path = "../../../modalkit/crates/modalkit" }
-modalkit-ratatui = { path = "../../../modalkit/crates/modalkit-ratatui" }
+modalkit = { git = "https://github.com/aschey/modalkit", rev = "5d9da9f9b7c03bf257e19a44ab7d4450a3ece394" }
+modalkit-ratatui = { git = "https://github.com/aschey/modalkit", rev = "5d9da9f9b7c03bf257e19a44ab7d4450a3ece394" }
 terminput = { git = "https://github.com/aschey/terminput", rev = "f07cb891c397c1ab092f0f1d09c085eb52c42e8d" }
 crossterm = "0.28"
 ratatui = { version = "0.28", features = ["unstable"] }
