--- a/crates/rooibos-keybind/Cargo.toml
+++ b/crates/rooibos-keybind/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 rooibos-keybind-macros = { path = "../rooibos-keybind-macros" }
 rooibos-dom = { path = "../rooibos-dom" }
 rooibos-reactive = { path = "../rooibos-reactive" }
+rooibos-runtime = { path = "../rooibos-runtime", optional = true }
 modalkit = { git = "https://github.com/aschey/modalkit", rev = "5d9da9f9b7c03bf257e19a44ab7d4450a3ece394" }
 modalkit-ratatui = { git = "https://github.com/aschey/modalkit", rev = "5d9da9f9b7c03bf257e19a44ab7d4450a3ece394" }
 terminput = { git = "https://github.com/aschey/terminput", rev = "f07cb891c397c1ab092f0f1d09c085eb52c42e8d" }
@@ -19,3 +20,6 @@ clap = { version = "4.5.20", features = ["derive"] }
 shlex = "1.3.0"
 clap_complete = { version = "4.5.33", features = ["unstable-dynamic"] }
 unicode-width = "0.2.0"
+
+[features]
+runtime = ["rooibos-runtime"]
