--- a/crates/rooibos-keybind/Cargo.toml
+++ b/crates/rooibos-keybind/Cargo.toml
@@ -8,14 +8,15 @@ rooibos-keybind-macros = { path = "../rooibos-keybind-macros" }
 rooibos-dom = { path = "../rooibos-dom" }
 rooibos-reactive = { path = "../rooibos-reactive" }
 rooibos-runtime = { path = "../rooibos-runtime", optional = true }
-modalkit = { git = "https://github.com/aschey/modalkit", rev = "395d5cd610d866c25c07e14de64153212606d80d" }
-modalkit-ratatui = { git = "https://github.com/aschey/modalkit", rev = "395d5cd610d866c25c07e14de64153212606d80d" }
+modalkit = { git = "https://github.com/aschey/modalkit", rev = "00aae1e3725af7dd54bde1776caed56cdcdb0640" }
+modalkit-ratatui = { git = "https://github.com/aschey/modalkit", rev = "00aae1e3725af7dd54bde1776caed56cdcdb0640" }
 terminput = { git = "https://github.com/aschey/terminput", rev = "f07cb891c397c1ab092f0f1d09c085eb52c42e8d" }
 crossterm = "0.28"
 ratatui = { version = "0.28", features = ["unstable"] }
 wasm-compat = { git = "https://github.com/aschey/wasm-compat", rev = "98287ef1046e4c8694e0b90fbb0d0986573a1969", features = [
   "all",
 ] }
+educe = "0.6"
 clap = { version = "4.5.20", features = ["derive"] }
 shlex = "1.3.0"
 clap_complete = { version = "4.5.33", features = ["unstable-dynamic"] }
