--- a/crates/rooibos-components/Cargo.toml
+++ b/crates/rooibos-components/Cargo.toml
@@ -23,6 +23,7 @@ throbber-widgets-tui = { version = "0.7.0", optional = true }
 tokio-util = "0.7"
 futures-cancel = { git = "https://github.com/aschey/futures-cancel", rev = "d2c20b78ff5c9e85aa892b51971cc1c1b6b22351" }
 getrandom = { version = "0.2", features = ["js"], optional = true }
+derive_more = { version = "1.0.0", features = ["deref", "deref_mut"] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tui-term = { version = "0.1.12", optional = true }
