--- a/crates/rooibos-reactive/Cargo.toml
+++ b/crates/rooibos-reactive/Cargo.toml
@@ -6,18 +6,14 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-reactive_graph = { git = "https://github.com/leptos-rs/leptos", rev = "7b8cd90a6ef113495d0efc5fb8676bd0694a7705", features = [
-  "tracing",
-  "effects",
-] }
-tachys = { git = "https://github.com/aschey/leptos", rev = "068cab4d47425d9258c0fd5da1d81f82ba0af282", features = [
+reactive_graph = { version = "0.1.0", features = ["tracing", "effects"] }
+tachys = { git = "https://github.com/aschey/leptos", rev = "3ccbc884b2c9f0e7fbf6776389c2a1a75843559b", features = [
   "reactive_graph",
   "tracing",
 ] }
-
-throw_error = { git = "https://github.com/leptos-rs/leptos", rev = "7b8cd90a6ef113495d0efc5fb8676bd0694a7705" }
-next_tuple = { git = "https://github.com/leptos-rs/leptos", rev = "7b8cd90a6ef113495d0efc5fb8676bd0694a7705" }
-reactive_stores = { git = "https://github.com/leptos-rs/leptos", rev = "7b8cd90a6ef113495d0efc5fb8676bd0694a7705" }
+throw_error = "0.2.0"
+next_tuple = "0.1.0"
+reactive_stores = "0.1.0"
 terminput = { git = "https://github.com/aschey/terminput", rev = "f07cb891c397c1ab092f0f1d09c085eb52c42e8d" }
 rooibos-dom = { path = "../rooibos-dom" }
 ratatui = { version = "0.28", features = ["unstable"] }
@@ -37,16 +33,11 @@ crossterm = { version = "0.28.1", features = ["event-stream", "use-dev-tty"] }
 tracing = "0.1"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-any_spawner = { git = "https://github.com/leptos-rs/leptos", rev = "7b8cd90a6ef113495d0efc5fb8676bd0694a7705", features = [
-  "tokio",
-  "tracing",
-] }
+any_spawner = { version = "0.2.0", features = ["tokio", "tracing"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = { version = "0.2", features = ["enable-interning"] }
-any_spawner = { git = "https://github.com/leptos-rs/leptos", rev = "7b8cd90a6ef113495d0efc5fb8676bd0694a7705", features = [
-  "wasm-bindgen",
-] }
+any_spawner = { version = "0.2.0", features = ["wasm-bindgen"] }
 
 [features]
 nightly = ["reactive_graph/nightly", "tachys/nightly"]
