--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -36,6 +36,7 @@ taffy = "0.6.2"
 tokio-util = "0.7.12"
 tracing-appender = "0.2.3"
 shlex = "1.3.0"
+color-eyre = "0.6.3"
 
 [dev-dependencies]
 insta = "1.40.0"
