--- a/examples/Cargo.toml
+++ b/examples/Cargo.toml
@@ -23,8 +23,8 @@ tracing-subscriber = { version = "0.3.18", features = [
   "env-filter",
 ] }
 rand = "0.8.5"
-tui-textarea = { version = "0.6" }
-tui-tree-widget = "0.22.0"
+tui-textarea = { version = "0.7" }
+tui-tree-widget = "0.23.0"
 reqwest = { version = "0.12.4", features = ["json"] }
 serde = "1.0.210"
 axum = "0.7.7"
@@ -37,6 +37,7 @@ tokio-util = "0.7.12"
 tracing-appender = "0.2.3"
 shlex = "1.3.0"
 color-eyre = "0.6.3"
+ratatui = { version = "0.29", features = ["palette"] }
 
 [dev-dependencies]
 insta = "1.40.0"
