--- a/crates/rooibos-dom/Cargo.toml
+++ b/crates/rooibos-dom/Cargo.toml
@@ -1,25 +1,25 @@
 [package]
 name = "rooibos-dom"
 version = "0.1.0"
-edition = "2021"
+edition = "2024"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
 ratatui = { version = "0.29", features = ["unstable"] }
 slotmap = "1"
-tokio = { version = "1.38.1", default-features = false, features = ["sync"] }
+tokio = { version = "1.43.0", default-features = false, features = ["sync"] }
 bitflags = "2"
 educe = "0.6"
 futures = "0.3"
 rustc-hash = "2"
-terminput = { git = "https://github.com/aschey/terminput", rev = "f07cb891c397c1ab092f0f1d09c085eb52c42e8d" }
+terminput = "0.2"
 tui-textarea = { version = "0.7", optional = true, default-features = false }
 paste = "1"
 wasm-compat = { git = "https://github.com/aschey/wasm-compat", rev = "ef5760036e0c49d3bc8b5e0d85722f6b88bc9f87", features = [
   "all",
 ] }
-taffy = "0.7.0"
+taffy = "0.7.5"
 crossterm = { version = "0.28.1", features = ["event-stream", "use-dev-tty"] }
 tracing = "0.1"
 thiserror = "2"
@@ -27,7 +27,7 @@ textwrap = "0.16.1"
 unicode-width = "0.2.0"
 
 [dev-dependencies]
-tokio = { version = "1.40", features = ["rt", "macros", "sync"] }
+tokio = { version = "1.43", features = ["rt", "macros", "sync"] }
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 wasm-bindgen = { version = "0.2", features = ["enable-interning"] }
