--- a/crates/rooibos-components/Cargo.toml
+++ b/crates/rooibos-components/Cargo.toml
@@ -5,7 +5,7 @@ edition = "2024"
 
 [dependencies]
 next_tuple = "0.1.0"
-either_of = "0.1.2"
+either_of = "0.1.5"
 tui-textarea = { version = "0.7", default-features = false, optional = true }
 crossterm = { version = "0.28.1", optional = true }
 rooibos-dom = { path = "../rooibos-dom" }
@@ -22,13 +22,13 @@ image = { version = "0.25", optional = true }
 throbber-widgets-tui = { version = "0.8.0", optional = true }
 tokio-util = "0.7"
 futures-cancel = { git = "https://github.com/aschey/futures-cancel", rev = "d2c20b78ff5c9e85aa892b51971cc1c1b6b22351" }
-getrandom = { version = "0.2", features = ["js"], optional = true }
-derive_more = { version = "1.0.0", features = ["deref", "deref_mut"] }
+getrandom = { version = "0.3", features = ["wasm_js"], optional = true }
+derive_more = { version = "2", features = ["deref", "deref_mut"] }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 tui-term = { version = "0.2.0", optional = true }
 vt100 = { version = "0.15", optional = true }
-portable-pty = { version = "0.8", optional = true }
+portable-pty = { version = "0.9", optional = true }
 
 [features]
 crossterm = [
