--- a/crates/rooibos-keybind/Cargo.toml
+++ b/crates/rooibos-keybind/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-rooibos-keybind-macros = { path = "../rooibos-keybind-macros" }
+rooibos-keybind-macros = { path = "../rooibos-keybind-macros", optional = true }
 rooibos-dom = { path = "../rooibos-dom" }
 rooibos-reactive = { path = "../rooibos-reactive" }
 rooibos-runtime = { path = "../rooibos-runtime", optional = true }
@@ -17,10 +17,18 @@ wasm-compat = { git = "https://github.com/aschey/wasm-compat", rev = "ef5760036e
   "all",
 ] }
 educe = "0.6"
-clap = { version = "4.5.29", features = ["derive"] }
-shlex = "1.3.0"
-clap_complete = { version = "4.5.44", features = ["unstable-dynamic"] }
+clap = { version = "4.5.29", features = ["derive"], optional = true }
+shlex = { version = "1.3.0", optional = true }
+clap_complete = { version = "4.5.44", features = [
+  "unstable-dynamic",
+], optional = true }
 unicode-width = "0.2.0"
 
 [features]
 runtime = ["rooibos-runtime"]
+derive-commands = [
+  "dep:clap",
+  "dep:clap_complete",
+  "dep:shlex",
+  "dep:rooibos-keybind-macros",
+]
