--- a/crates/rooibos/Cargo.toml
+++ b/crates/rooibos/Cargo.toml
@@ -55,3 +55,4 @@ clipboard = [
 ]
 keybind = ["rooibos-keybind"]
 spinner = ["rooibos-components/spinner"]
+derive-commands = ["rooibos-keybind?/derive-commands"]
