--- a/crates/rooibos-reactive/Cargo.toml
+++ b/crates/rooibos-reactive/Cargo.toml
@@ -46,3 +46,4 @@ termion = ["rooibos-dom/termion", "tui-textarea?/termion"]
 termwiz = ["rooibos-dom/termwiz", "tui-textarea?/termwiz"]
 input = ["tui-textarea"]
 default = ["crossterm"]
+effects = ["rooibos-dom/effects"]
